
 zenTrack is a top quality, simple, and elegant
 tracking system for small to medium-large companies.
 Clean, simple interface, fully adaptable administration,
 object oriented and database abstracted design lend to 
 endless possibilities for project expansion.

----- V2.4.1 (Development, See CVS) ----
2003-04-22, Rob Hillis
  Allow users to select "-All-" as their default bin
    - zentrack/www/misc/homebin.php 1.5
    - zentrack/includes/templates/homebinForm.php 1.6
    - zentrack/includes/leftBins.php 1.7

----- V2.4.0.1 (2003-04-21) ----
2003-04-22, Rob Hillis
  Fix syntax error on ticket closing.
    - zentrack/includes/zenTrack.class

2003-04-21, Kato
  Fixed save config error
    - zentrack/includes/templates/configForm.php 1.4

2003-04-21, Rob Hillis
  Rename mis-spelled LISCENCE-GPL-2.0 in install/ directory
    - zentrack/install/LISCENCE-GPL-2.0 <del>
    - zentrack/install/LICENSE-GPL-2.0 1.1
  Fix minor typos in INSTALL.README
    - zentrack/INSTALL.README 1.23
  Include missing instructions for upgrading database in UPGRADE.readme
    - zentrack/UPGRADE.readme 1.10

----- V2.4 (2003-04-19) ----

2003-04-19, Rob Hillis
  More work for sorting of bins: create and search menus
    - zentrack/includes/templates/newTicketForm.php 1.24
    - zentrack/includes/templates/newProjectForm.php 1.20
    - zentrack/includes/templates/searchForm.php 1.6
  Fix bins.php to remove syntax error
    - zentrack/www/admin/bins.php 1.5

2003-04-18, Kato
  Revised issue with users moving tickets (header.php not found error)
    - zentrack/www/ticket.php 1.15
  Added swedish translation
    - zentrack/includes/translations/swedish.trans 1.2
  Updated "log" action in egate, and cleaned up a bit
    - zentrack/includes/egate_utils.php 1.26
  Updated email logic to email appropriate users, even if not on notify list
    - zentrack/includes/zenTrack.class 1.90
  Cache the priority pulldown in admin screens for speed